--- a/meta-openpli/conf/distro/openpli.conf
+++ b/meta-openpli/conf/distro/openpli.conf
@@ -95,3 +95,6 @@ TCLIBCAPPEND = ""
 # Drop unused PACKAGE_EXTRA_ARCHS
 PACKAGE_EXTRA_ARCHS = "${TUNE_PKGARCH}"
 
+# add support for extra feeds
+PACKAGE_ARCHS += " 3rdparty ${MACHINE}_3rdparty"
+
