--- a/meta-openpli/conf/machine/sogno8800hd.conf
+++ b/meta-openpli/conf/machine/sogno8800hd.conf
@@ -8,6 +8,8 @@ MACHINE_BRAND = "Sogno"
 
 MACHINE_NAME = "8800HD"
 
+MACHINEBUILD = "sogno-8800hd"
+
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
 	sogno-dvb-modules-sogno8800hd \
 	"
