--- a/meta-openpli/conf/machine/sogno8800hd.conf
+++ b/meta-openpli/conf/machine/sogno8800hd.conf
@@ -21,6 +21,10 @@ CHIPSET = "bcm7413"
 
 TARGET_FPU = "hard"
 
+OPENPLI_FEATURES = "ci"
+
+MACHINE_FEATURES += "textlcd ci dvb-c"
+
 MACHINE_KERNEL_PR = "r1"
 
 IMAGEDIR ?= "sogno/8800hd"
