--- a/meta-openpli/conf/layer.conf
+++ b/meta-openpli/conf/layer.conf
@@ -9,3 +9,5 @@ BBFILE_PATTERN_openpli-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_openpli-layer = "7"
 
 OPENPLI_BASE := '${@os.path.normpath("${LAYERDIR}/../")}'
+
+OE_VER ?= 'OE-Alliance 2.0'
