--- a/meta-openpli/conf/machine/sogno8800hd.conf
+++ b/meta-openpli/conf/machine/sogno8800hd.conf
@@ -23,7 +23,7 @@ TARGET_FPU = "hard"
 
 OPENPLI_FEATURES = "ci"
 
-MACHINE_FEATURES += "textlcd ci dvb-c"
+MACHINE_FEATURES += "textlcd ci dvb-c blindscan-dvbc blindscan-dvbs"
 
 MACHINE_KERNEL_PR = "r1"
 
